# serializer version: 1
# name: test_index_stats_for_authorized_prescriber[CAP_EMPLOI]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
  
  <section class="s-section mb-3 mb-lg-5">
      <div class="s-section__container">
          <div class="row row-cols-1 row-cols-lg-2 mt-3 mt-lg-5">
              <div class="col mb-3 mb-lg-5 d-flex flex-column">
                  <h3>Mes données</h3>
                  <div class="c-box p-0 flex-grow-1">
                      <div class="p-3 p-lg-4">
                          <h4 class="mb-0">Recrutement</h4>
                      </div>
                      <div class="px-3 px-lg-4">
                          <ul class="list-unstyled mb-lg-5">
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="/stats/ph/state/main">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Analyse des candidatures émises et de leur traitement</span>
                                  </a>
                              </li>
                          </ul>
                      </div>
                  </div>
              </div>
              
  
  <div class="col mb-3 mb-lg-5 d-flex flex-column">
      <h3>Données nationales publiques</h3>
      <div class="c-box p-0 flex-grow-1">
          <div class="px-3 px-lg-4 pt-3 pt-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-employeurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des employeurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-prescripteurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des prescripteurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/cartographies-iae/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Bilan territorial des orientations</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/postes-en-tension/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Cartographie des postes difficiles à pourvoir</span>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  
          </div>
      </div>
  </section>
  
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_authorized_prescriber[CHRS]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
  
  <section class="s-section mb-3 mb-lg-5">
      <div class="s-section__container">
          <div class="row row-cols-1 row-cols-lg-2 mt-3 mt-lg-5">
              <div class="col mb-3 mb-lg-5 d-flex flex-column">
                  <h3>Mes données</h3>
                  <div class="c-box p-0 flex-grow-1">
                      <div class="p-3 p-lg-4">
                          <h4 class="mb-0">Recrutement</h4>
                      </div>
                      <div class="px-3 px-lg-4">
                          <ul class="list-unstyled mb-lg-5">
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="/stats/ph/state/main">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Analyse des candidatures émises et de leur traitement</span>
                                  </a>
                              </li>
                          </ul>
                      </div>
                  </div>
              </div>
              
  
  <div class="col mb-3 mb-lg-5 d-flex flex-column">
      <h3>Données nationales publiques</h3>
      <div class="c-box p-0 flex-grow-1">
          <div class="px-3 px-lg-4 pt-3 pt-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-employeurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des employeurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-prescripteurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des prescripteurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/cartographies-iae/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Bilan territorial des orientations</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/postes-en-tension/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Cartographie des postes difficiles à pourvoir</span>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  
          </div>
      </div>
  </section>
  
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_authorized_prescriber[CHU]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
  
  <section class="s-section mb-3 mb-lg-5">
      <div class="s-section__container">
          <div class="row row-cols-1 row-cols-lg-2 mt-3 mt-lg-5">
              <div class="col mb-3 mb-lg-5 d-flex flex-column">
                  <h3>Mes données</h3>
                  <div class="c-box p-0 flex-grow-1">
                      <div class="p-3 p-lg-4">
                          <h4 class="mb-0">Recrutement</h4>
                      </div>
                      <div class="px-3 px-lg-4">
                          <ul class="list-unstyled mb-lg-5">
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="/stats/ph/state/main">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Analyse des candidatures émises et de leur traitement</span>
                                  </a>
                              </li>
                          </ul>
                      </div>
                  </div>
              </div>
              
  
  <div class="col mb-3 mb-lg-5 d-flex flex-column">
      <h3>Données nationales publiques</h3>
      <div class="c-box p-0 flex-grow-1">
          <div class="px-3 px-lg-4 pt-3 pt-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-employeurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des employeurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-prescripteurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des prescripteurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/cartographies-iae/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Bilan territorial des orientations</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/postes-en-tension/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Cartographie des postes difficiles à pourvoir</span>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  
          </div>
      </div>
  </section>
  
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_authorized_prescriber[DEPT]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
  
  <section class="s-section mb-3 mb-lg-5">
      <div class="s-section__container">
          <div class="row row-cols-1 row-cols-lg-2 mt-3 mt-lg-5">
              <div class="col mb-3 mb-lg-5 d-flex flex-column">
                  <h3>Mes données</h3>
                  <div class="c-box p-0 flex-grow-1">
                      <div class="p-3 p-lg-4">
                          <h4 class="mb-0">Conventionnement</h4>
                      </div>
                      <div class="px-3 px-lg-4">
                          <ul class="list-unstyled mb-lg-5">
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="/stats/cd/orga_etp">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Suivi des effectifs annuels et mensuels (ETP)</span>
                                  </a>
                              </li>
                          </ul>
                      </div>
                  </div>
                  <div class="c-box p-0 mt-3 mt-lg-4">
                      <div class="p-3 p-lg-4">
                          <h4 class="mb-0">Recrutement</h4>
                      </div>
                      <div class="px-3 px-lg-4">
                          <ul class="list-unstyled mb-lg-5">
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="/stats/cd/hiring">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Analyse des candidatures reçues et de leur traitement</span>
                                  </a>
                              </li>
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="/stats/cd/brsa">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Analyse des prescriptions pour les publics ARSA</span>
                                  </a>
                              </li>
                          </ul>
                      </div>
                  </div>
              </div>
              
  
  <div class="col mb-3 mb-lg-5 d-flex flex-column">
      <h3>Données nationales publiques</h3>
      <div class="c-box p-0 flex-grow-1">
          <div class="px-3 px-lg-4 pt-3 pt-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-employeurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des employeurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-prescripteurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des prescripteurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/cartographies-iae/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Bilan territorial des orientations</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/postes-en-tension/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Cartographie des postes difficiles à pourvoir</span>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  
          </div>
      </div>
  </section>
  
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_authorized_prescriber[FT]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  <section class="s-section mb-3 mb-lg-5">
      <div class="s-section__container">
          <div class="row row-cols-1 row-cols-lg-2 mt-3 mt-lg-5">
              <div class="col mb-3 mb-lg-5 d-flex flex-column">
                  <h3>Mes données</h3>
                  <div class="c-box p-0 flex-grow-1">
                      <div class="p-3 p-lg-4">
                          <h4 class="mb-0">Recrutement</h4>
                      </div>
                      <div class="px-3 px-lg-4">
                          <ul class="list-unstyled mb-lg-5">
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="/stats/pe/state/main">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Analyse des candidatures émises et de leur traitement</span>
                                  </a>
                              </li>
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="/stats/pe/conversion/main">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Analyse des parcours des candidats diagnostiqués</span>
                                  </a>
                              </li>
                          </ul>
                      </div>
                  </div>
              </div>
              
  
  <div class="col mb-3 mb-lg-5 d-flex flex-column">
      <h3>Données nationales publiques</h3>
      <div class="c-box p-0 flex-grow-1">
          <div class="px-3 px-lg-4 pt-3 pt-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-employeurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des employeurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-prescripteurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des prescripteurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/cartographies-iae/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Bilan territorial des orientations</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/postes-en-tension/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Cartographie des postes difficiles à pourvoir</span>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  
          </div>
      </div>
  </section>
  
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_authorized_prescriber[ML]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
  
  <section class="s-section mb-3 mb-lg-5">
      <div class="s-section__container">
          <div class="row row-cols-1 row-cols-lg-2 mt-3 mt-lg-5">
              <div class="col mb-3 mb-lg-5 d-flex flex-column">
                  <h3>Mes données</h3>
                  <div class="c-box p-0 flex-grow-1">
                      <div class="p-3 p-lg-4">
                          <h4 class="mb-0">Recrutement</h4>
                      </div>
                      <div class="px-3 px-lg-4">
                          <ul class="list-unstyled mb-lg-5">
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="/stats/ph/state/main">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Analyse des candidatures émises et de leur traitement</span>
                                  </a>
                              </li>
                          </ul>
                      </div>
                  </div>
              </div>
              
  
  <div class="col mb-3 mb-lg-5 d-flex flex-column">
      <h3>Données nationales publiques</h3>
      <div class="c-box p-0 flex-grow-1">
          <div class="px-3 px-lg-4 pt-3 pt-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-employeurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des employeurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-prescripteurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des prescripteurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/cartographies-iae/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Bilan territorial des orientations</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/postes-en-tension/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Cartographie des postes difficiles à pourvoir</span>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  
          </div>
      </div>
  </section>
  
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_authorized_prescriber[OIL]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
  
  <section class="s-section mb-3 mb-lg-5">
      <div class="s-section__container">
          <div class="row row-cols-1 row-cols-lg-2 mt-3 mt-lg-5">
              <div class="col mb-3 mb-lg-5 d-flex flex-column">
                  <h3>Mes données</h3>
                  <div class="c-box p-0 flex-grow-1">
                      <div class="p-3 p-lg-4">
                          <h4 class="mb-0">Recrutement</h4>
                      </div>
                      <div class="px-3 px-lg-4">
                          <ul class="list-unstyled mb-lg-5">
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="/stats/ph/state/main">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Analyse des candidatures émises et de leur traitement</span>
                                  </a>
                              </li>
                          </ul>
                      </div>
                  </div>
              </div>
              
  
  <div class="col mb-3 mb-lg-5 d-flex flex-column">
      <h3>Données nationales publiques</h3>
      <div class="c-box p-0 flex-grow-1">
          <div class="px-3 px-lg-4 pt-3 pt-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-employeurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des employeurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-prescripteurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des prescripteurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/cartographies-iae/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Bilan territorial des orientations</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/postes-en-tension/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Cartographie des postes difficiles à pourvoir</span>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  
          </div>
      </div>
  </section>
  
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_authorized_prescriber[RS_FJT]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
  
  <section class="s-section mb-3 mb-lg-5">
      <div class="s-section__container">
          <div class="row row-cols-1 row-cols-lg-2 mt-3 mt-lg-5">
              <div class="col mb-3 mb-lg-5 d-flex flex-column">
                  <h3>Mes données</h3>
                  <div class="c-box p-0 flex-grow-1">
                      <div class="p-3 p-lg-4">
                          <h4 class="mb-0">Recrutement</h4>
                      </div>
                      <div class="px-3 px-lg-4">
                          <ul class="list-unstyled mb-lg-5">
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="/stats/ph/state/main">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Analyse des candidatures émises et de leur traitement</span>
                                  </a>
                              </li>
                          </ul>
                      </div>
                  </div>
              </div>
              
  
  <div class="col mb-3 mb-lg-5 d-flex flex-column">
      <h3>Données nationales publiques</h3>
      <div class="c-box p-0 flex-grow-1">
          <div class="px-3 px-lg-4 pt-3 pt-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-employeurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des employeurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-prescripteurs/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Profil des prescripteurs</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/cartographies-iae/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Bilan territorial des orientations</span>
                      </a>
                  </li>
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/postes-en-tension/">
                          <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                          <span>Cartographie des postes difficiles à pourvoir</span>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  
          </div>
      </div>
  </section>
  
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_employer
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
  
  <section class="s-section mb-3 mb-lg-5">
      <div class="s-section__container">
          <div class="row row-cols-1 row-cols-lg-2 mt-3 mt-lg-5">
              <div class="col mb-3 mb-lg-5 d-flex flex-column">
                  <h3>Mes données</h3>
                  <div class="c-box p-0 flex-grow-1">
                      <div class="p-3 p-lg-4">
                          <h4 class="mb-0">Conventionnement</h4>
                      </div>
                      <div class="px-3 px-lg-4">
                          <ul class="list-unstyled mb-lg-5">
                              
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="/stats/siae/orga_etp">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                      <span>Suivre les effectifs annuels et mensuels (ETP) de ma structure</span>
                                  </a>
                              </li>
                          </ul>
                      </div>
                  </div>
                  <div class="c-box p-0 mt-3 mt-lg-4">
                      <div class="p-3 p-lg-4">
                          <h4 class="mb-0">Recrutement</h4>
                      </div>
                      <div class="px-3 px-lg-4">
                          <ul class="list-unstyled mb-lg-5">
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="/stats/siae/hiring">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Analyse des candidatures reçues et de leur traitement</span>
                                  </a>
                              </li>
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="/stats/siae/auto_prescription">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Suivi de l’activité d’auto-prescription et du contrôle à posteriori</span>
                                  </a>
                              </li>
                          </ul>
                      </div>
                  </div>
              </div>
              <div class="col mb-3 mb-lg-5 d-flex flex-column">
                  <h3>Données nationales publiques</h3>
                  <div class="c-box p-0 flex-grow-1">
                      <div class="px-3 px-lg-4 pt-3 pt-lg-4">
                          <ul class="list-unstyled mb-lg-5">
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/conventionnements-iae/">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Cartographie du conventionnement IAE</span>
                                  </a>
                              </li>
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/cartographies-iae/">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Bilan territorial des orientations</span>
                                  </a>
                              </li>
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/auto-prescription/">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Pratiques d'auto-prescription en SIAE</span>
                                  </a>
                              </li>
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/zoom-prescripteurs/">
                                      <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal"></i>
                                      <span>Profil des prescripteurs</span>
                                  </a>
                              </li>
                          </ul>
                      </div>
                  </div>
              </div>
          </div>
      </div>
  </section>
  
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_labor_inspector[Autre]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
                                  <div class="row row-cols-1 row-cols-md-2 mt-3 mt-md-4"><div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données personnalisées</span>
          </div>
          <div class="px-3 px-lg-4">
              
                  <p>
                      Vous ne disposez pas pour le moment de statistiques personnalisées.
                      Faites-nous part de vos besoins éventuels en nous contactant
                      <a aria-label="Formulaire de contact (ouverture dans un nouvel onglet)" href="https://aide.pilotage.inclusion.beta.gouv.fr/hc/fr/requests/new" rel="noreferrer noopener" target="_blank" title="Formulaire de contact (ouverture dans un nouvel onglet)">ici</a>.
                  </p>
              
          </div>
      </div>
  </div>
  <div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données publiques</span>
          </div>
          <div class="px-3 px-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Accéder aux tableaux de bord publics (ouverture dans un nouvel onglet)" class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord" rel="noopener" target="_blank">
                          <i aria-hidden="true" class="ri-dashboard-line ri-lg fw-normal align-self-start"></i>
                          <span>Accéder aux tableaux de bord publics</span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2"></i>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  </div>
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_labor_inspector[CONVERGENCE]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
                                  <div class="row row-cols-1 row-cols-md-2 mt-3 mt-md-4"><div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données personnalisées</span>
          </div>
          <div class="px-3 px-lg-4">
              
                  <ul class="list-unstyled mb-lg-5">
                      
                      
                      
                      
                      
                      
                      
                      
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/convergence/prescription">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Prescriptions et parcours</span>
                              </a>
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/convergence/job_application">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Traitement et résultats des candidatures émises</span>
                              </a>
                          </li>
                      
                  </ul>
              
          </div>
      </div>
  </div>
  <div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données publiques</span>
          </div>
          <div class="px-3 px-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Accéder aux tableaux de bord publics (ouverture dans un nouvel onglet)" class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord" rel="noopener" target="_blank">
                          <i aria-hidden="true" class="ri-dashboard-line ri-lg fw-normal align-self-start"></i>
                          <span>Accéder aux tableaux de bord publics</span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2"></i>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  </div>
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_labor_inspector[DDETS GEIQ]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
                                  <div class="row row-cols-1 row-cols-md-2 mt-3 mt-md-4"><div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données personnalisées</span>
          </div>
          <div class="px-3 px-lg-4">
              
                  <p>
                      Vous ne disposez pas pour le moment de statistiques personnalisées.
                      Faites-nous part de vos besoins éventuels en nous contactant
                      <a aria-label="Formulaire de contact (ouverture dans un nouvel onglet)" href="https://aide.pilotage.inclusion.beta.gouv.fr/hc/fr/requests/new" rel="noreferrer noopener" target="_blank" title="Formulaire de contact (ouverture dans un nouvel onglet)">ici</a>.
                  </p>
              
          </div>
      </div>
  </div>
  <div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données publiques</span>
          </div>
          <div class="px-3 px-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Accéder aux tableaux de bord publics (ouverture dans un nouvel onglet)" class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord" rel="noopener" target="_blank">
                          <i aria-hidden="true" class="ri-dashboard-line ri-lg fw-normal align-self-start"></i>
                          <span>Accéder aux tableaux de bord publics</span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2"></i>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  </div>
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_labor_inspector[DDETS IAE]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
                                      
  
  <section class="s-section mb-3 mb-md-5">
      <div class="s-section__container">
          <div class="row mb-1 mb-md-3">
              <div class="col-12">
                  <h2 class="mb-0">Chiffres clés</h2>
                  <p class="fs-sm mb-3">
                      Dernière mise à jour des données du flux IAE : Jamais
                  </p>
              </div>
              <div class="col-12">
                  <div class="d-flex flex-column flex-lg-row gap-3 gap-lg-4 p-3 p-lg-4 bg-light rounded-3">
                      
                      <div class="d-flex flex-column w-100">
                          <div class="flex-grow-1">
                              <p class="mb-0 mb-lg-3">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-2x text-pilotage"></i>
                                  <span class="h1">N/A</span>
                              </p>
                              <p>C’est le nombre de candidats dans la file active IAE de votre territoire depuis plus de 30 jours à l’instant t.</p>
                          </div>
                          <div>
                              <a aria-label="En savoir plus sur ces données (ouverture dans un nouvel onglet)" class="btn btn-link ps-0 has-external-link" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/bilan-candidatures-iae/" rel="noopener" target="_blank">Consulter ces données</a>
                          </div>
                      </div>
                      
                      <div class="d-flex flex-column w-100">
                          <div class="flex-grow-1">
                              <p class="mb-0 mb-lg-3">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-2x text-pilotage"></i>
                                  <span class="h1">N/A</span>
                              </p>
                              <p>C’est le nombre de fiches de poste en tension chez les SIAE de votre territoire à l’instant t.</p>
                          </div>
                      </div>
                      
                      <div class="d-flex flex-column w-100">
                          <div class="flex-grow-1">
                              <p class="mb-0 mb-lg-3">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-2x text-pilotage"></i>
                                  <span class="h1">N/A%</span>
                              </p>
                              <p>C'est le taux d'embauches en auto prescription.</p>
                          </div>
                          <div>
                              <a aria-label="En savoir plus sur ces données (ouverture dans un nouvel onglet)" class="btn btn-link ps-0 has-external-link" href="/stats/redirect/auto_prescription" rel="noopener" target="_blank">Consulter ces données</a>
                          </div>
                      </div>
                  </div>
              </div>
          </div>
      </div>
  </section>
  
                                  
                                  <div class="row row-cols-1 row-cols-md-2 mt-3 mt-md-4"><div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données personnalisées</span>
          </div>
          <div class="px-3 px-lg-4">
              
                  <ul class="list-unstyled mb-lg-5">
                      
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/ddets/auto_prescription">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Les auto-prescription et suivi du contrôle à posteriori des structures de mon département</span>
                              </a>
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/ddets/ph_prescription">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Suivi des prescriptions des prescripteurs habilités de mon département</span>
                              </a>
  
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/ddets/follow_prolongation">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Suivi des demandes de prolongation de mon département</span>
                              </a>
                          </li>
                          <!-- Stats temporarily suspended until we stabilize them
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a href="/stats/ddets/iae" class="btn-link btn-ico">
                                      <i class="ri-bar-chart-line ri-lg fw-normal align-self-start" aria-hidden="true"></i>
                                      <span>Données IAE de mon département</span>
                                  </a>
                              </li>
                          -->
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/ddets/hiring">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Données facilitation à l'embauche de mon département</span>
                              </a>
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/ddets/state">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Prescriptions des acteurs AHI de ma région</span>
                              </a>
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/ddets/orga_etp">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Suivre les effectifs annuels et mensuels en ETP des structures de mon département</span>
                              </a>
  
                          </li>
                      
                      
                      
                      
                      
                      
                      
                      
                  </ul>
              
          </div>
      </div>
  </div>
  <div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données publiques</span>
          </div>
          <div class="px-3 px-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Accéder aux tableaux de bord publics (ouverture dans un nouvel onglet)" class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord" rel="noopener" target="_blank">
                          <i aria-hidden="true" class="ri-dashboard-line ri-lg fw-normal align-self-start"></i>
                          <span>Accéder aux tableaux de bord publics</span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2"></i>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  </div>
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_labor_inspector[DDETS LOG]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
                                  <div class="row row-cols-1 row-cols-md-2 mt-3 mt-md-4"><div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données personnalisées</span>
          </div>
          <div class="px-3 px-lg-4">
              
                  <ul class="list-unstyled mb-lg-5">
                      
                      
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/ddets_log/state">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Prescriptions des acteurs AHI de ma région</span>
                              </a>
                          </li>
                      
                      
                      
                      
                      
                      
                      
                  </ul>
              
          </div>
      </div>
  </div>
  <div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données publiques</span>
          </div>
          <div class="px-3 px-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Accéder aux tableaux de bord publics (ouverture dans un nouvel onglet)" class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord" rel="noopener" target="_blank">
                          <i aria-hidden="true" class="ri-dashboard-line ri-lg fw-normal align-self-start"></i>
                          <span>Accéder aux tableaux de bord publics</span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2"></i>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  </div>
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_labor_inspector[DGEFP GEIQ]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
                                  <div class="row row-cols-1 row-cols-md-2 mt-3 mt-md-4"><div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données personnalisées</span>
          </div>
          <div class="px-3 px-lg-4">
              
                  <p>
                      Vous ne disposez pas pour le moment de statistiques personnalisées.
                      Faites-nous part de vos besoins éventuels en nous contactant
                      <a aria-label="Formulaire de contact (ouverture dans un nouvel onglet)" href="https://aide.pilotage.inclusion.beta.gouv.fr/hc/fr/requests/new" rel="noreferrer noopener" target="_blank" title="Formulaire de contact (ouverture dans un nouvel onglet)">ici</a>.
                  </p>
              
          </div>
      </div>
  </div>
  <div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données publiques</span>
          </div>
          <div class="px-3 px-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Accéder aux tableaux de bord publics (ouverture dans un nouvel onglet)" class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord" rel="noopener" target="_blank">
                          <i aria-hidden="true" class="ri-dashboard-line ri-lg fw-normal align-self-start"></i>
                          <span>Accéder aux tableaux de bord publics</span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2"></i>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  </div>
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_labor_inspector[DGEFP IAE]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
                                      
  
  <section class="s-section mb-3 mb-md-5">
      <div class="s-section__container">
          <div class="row mb-1 mb-md-3">
              <div class="col-12">
                  <h2 class="mb-0">Chiffres clés</h2>
                  <p class="fs-sm mb-3">
                      Dernière mise à jour des données du flux IAE : Jamais
                  </p>
              </div>
              <div class="col-12">
                  <div class="d-flex flex-column flex-lg-row gap-3 gap-lg-4 p-3 p-lg-4 bg-light rounded-3">
                      
                      <div class="d-flex flex-column w-100">
                          <div class="flex-grow-1">
                              <p class="mb-0 mb-lg-3">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-2x text-pilotage"></i>
                                  <span class="h1">N/A</span>
                              </p>
                              <p>C’est le nombre de candidats dans la file active IAE de votre territoire depuis plus de 30 jours à l’instant t.</p>
                          </div>
                          <div>
                              <a aria-label="En savoir plus sur ces données (ouverture dans un nouvel onglet)" class="btn btn-link ps-0 has-external-link" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/bilan-candidatures-iae/" rel="noopener" target="_blank">Consulter ces données</a>
                          </div>
                      </div>
                      
                      <div class="d-flex flex-column w-100">
                          <div class="flex-grow-1">
                              <p class="mb-0 mb-lg-3">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-2x text-pilotage"></i>
                                  <span class="h1">N/A</span>
                              </p>
                              <p>C’est le nombre de fiches de poste en tension chez les SIAE de votre territoire à l’instant t.</p>
                          </div>
                      </div>
                      
                      <div class="d-flex flex-column w-100">
                          <div class="flex-grow-1">
                              <p class="mb-0 mb-lg-3">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-2x text-pilotage"></i>
                                  <span class="h1">N/A%</span>
                              </p>
                              <p>C'est le taux d'embauches en auto prescription.</p>
                          </div>
                          <div>
                              <a aria-label="En savoir plus sur ces données (ouverture dans un nouvel onglet)" class="btn btn-link ps-0 has-external-link" href="/stats/redirect/auto_prescription" rel="noopener" target="_blank">Consulter ces données</a>
                          </div>
                      </div>
                  </div>
              </div>
          </div>
      </div>
  </section>
  
                                  
                                  <div class="row row-cols-1 row-cols-md-2 mt-3 mt-md-4"><div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données personnalisées</span>
          </div>
          <div class="px-3 px-lg-4">
              
                  <ul class="list-unstyled mb-lg-5">
                      
                      
                      
                      
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/dgefp/auto_prescription">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Focus auto-prescription</span>
                              </a>
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/dgefp/follow_siae_evaluation">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Suivi du contrôle à posteriori</span>
                              </a>
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/dgefp/follow_prolongation">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Suivi des demandes de prolongation</span>
                              </a>
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/dgefp/siae_evaluation">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Voir les données du contrôle a posteriori (version bêta)</span>
                              </a>
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/dgefp/hiring">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Données facilitation à l'embauche</span>
                              </a>
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/dgefp/state">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Prescriptions des acteurs AHI</span>
                              </a>
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/dgefp/ph_prescription">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Suivi des prescriptions des prescripteurs habilités de ma région</span>
                              </a>
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/dgefp/orga_etp">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Suivre les effectifs annuels et mensuels en ETP des structures</span>
                              </a>
  
                          </li>
                      
                      
                      
                      
                      
                  </ul>
              
          </div>
      </div>
  </div>
  <div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données publiques</span>
          </div>
          <div class="px-3 px-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Accéder aux tableaux de bord publics (ouverture dans un nouvel onglet)" class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord" rel="noopener" target="_blank">
                          <i aria-hidden="true" class="ri-dashboard-line ri-lg fw-normal align-self-start"></i>
                          <span>Accéder aux tableaux de bord publics</span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2"></i>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  </div>
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_labor_inspector[DIHAL]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
                                  <div class="row row-cols-1 row-cols-md-2 mt-3 mt-md-4"><div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données personnalisées</span>
          </div>
          <div class="px-3 px-lg-4">
              
                  <ul class="list-unstyled mb-lg-5">
                      
                      
                      
                      
                      
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/dihal/state">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Prescriptions des acteurs AHI</span>
                              </a>
                          </li>
                      
                      
                      
                      
                  </ul>
              
          </div>
      </div>
  </div>
  <div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données publiques</span>
          </div>
          <div class="px-3 px-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Accéder aux tableaux de bord publics (ouverture dans un nouvel onglet)" class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord" rel="noopener" target="_blank">
                          <i aria-hidden="true" class="ri-dashboard-line ri-lg fw-normal align-self-start"></i>
                          <span>Accéder aux tableaux de bord publics</span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2"></i>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  </div>
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_labor_inspector[DREETS GEIQ]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
                                  <div class="row row-cols-1 row-cols-md-2 mt-3 mt-md-4"><div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données personnalisées</span>
          </div>
          <div class="px-3 px-lg-4">
              
                  <p>
                      Vous ne disposez pas pour le moment de statistiques personnalisées.
                      Faites-nous part de vos besoins éventuels en nous contactant
                      <a aria-label="Formulaire de contact (ouverture dans un nouvel onglet)" href="https://aide.pilotage.inclusion.beta.gouv.fr/hc/fr/requests/new" rel="noreferrer noopener" target="_blank" title="Formulaire de contact (ouverture dans un nouvel onglet)">ici</a>.
                  </p>
              
          </div>
      </div>
  </div>
  <div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données publiques</span>
          </div>
          <div class="px-3 px-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Accéder aux tableaux de bord publics (ouverture dans un nouvel onglet)" class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord" rel="noopener" target="_blank">
                          <i aria-hidden="true" class="ri-dashboard-line ri-lg fw-normal align-self-start"></i>
                          <span>Accéder aux tableaux de bord publics</span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2"></i>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  </div>
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_labor_inspector[DREETS IAE]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
                                      
  
  <section class="s-section mb-3 mb-md-5">
      <div class="s-section__container">
          <div class="row mb-1 mb-md-3">
              <div class="col-12">
                  <h2 class="mb-0">Chiffres clés</h2>
                  <p class="fs-sm mb-3">
                      Dernière mise à jour des données du flux IAE : Jamais
                  </p>
              </div>
              <div class="col-12">
                  <div class="d-flex flex-column flex-lg-row gap-3 gap-lg-4 p-3 p-lg-4 bg-light rounded-3">
                      
                      <div class="d-flex flex-column w-100">
                          <div class="flex-grow-1">
                              <p class="mb-0 mb-lg-3">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-2x text-pilotage"></i>
                                  <span class="h1">N/A</span>
                              </p>
                              <p>C’est le nombre de candidats dans la file active IAE de votre territoire depuis plus de 30 jours à l’instant t.</p>
                          </div>
                          <div>
                              <a aria-label="En savoir plus sur ces données (ouverture dans un nouvel onglet)" class="btn btn-link ps-0 has-external-link" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord/bilan-candidatures-iae/" rel="noopener" target="_blank">Consulter ces données</a>
                          </div>
                      </div>
                      
                      <div class="d-flex flex-column w-100">
                          <div class="flex-grow-1">
                              <p class="mb-0 mb-lg-3">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-2x text-pilotage"></i>
                                  <span class="h1">N/A</span>
                              </p>
                              <p>C’est le nombre de fiches de poste en tension chez les SIAE de votre territoire à l’instant t.</p>
                          </div>
                      </div>
                      
                      <div class="d-flex flex-column w-100">
                          <div class="flex-grow-1">
                              <p class="mb-0 mb-lg-3">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-2x text-pilotage"></i>
                                  <span class="h1">N/A%</span>
                              </p>
                              <p>C'est le taux d'embauches en auto prescription.</p>
                          </div>
                          <div>
                              <a aria-label="En savoir plus sur ces données (ouverture dans un nouvel onglet)" class="btn btn-link ps-0 has-external-link" href="/stats/redirect/auto_prescription" rel="noopener" target="_blank">Consulter ces données</a>
                          </div>
                      </div>
                  </div>
              </div>
          </div>
      </div>
  </section>
  
                                  
                                  <div class="row row-cols-1 row-cols-md-2 mt-3 mt-md-4"><div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données personnalisées</span>
          </div>
          <div class="px-3 px-lg-4">
              
                  <ul class="list-unstyled mb-lg-5">
                      
                      
                      
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/dreets/auto_prescription">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Les auto-prescription et suivi du contrôle à posteriori des structures de ma région</span>
                              </a>
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/dreets/ph_prescription">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Suivi des prescriptions des prescripteurs habilités de ma région</span>
                              </a>
  
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/dreets/follow_prolongation">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Suivi des demandes de prolongation de ma région</span>
                              </a>
                          </li>
                          <!-- Stats temporarily suspended until we stabilize them
                              <li class="d-flex justify-content-between align-items-center mb-3">
                                  <a href="/stats/dreets/iae" class="btn-link btn-ico">
                                      <i class="ri-bar-chart-line ri-lg fw-normal align-self-start" aria-hidden="true"></i>
                                      <span>Données IAE de ma région</span>
                                  </a>
                              </li>
                          -->
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/dreets/hiring">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Données facilitation à l'embauche des structures de ma région</span>
                              </a>
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/dreets/state">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Prescriptions des acteurs AHI de ma région</span>
                              </a>
                          </li>
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/dreets/orga_etp">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Suivre les effectifs annuels et mensuels en ETP des structures de ma région</span>
                              </a>
  
                          </li>
                      
                      
                      
                      
                      
                      
                  </ul>
              
          </div>
      </div>
  </div>
  <div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données publiques</span>
          </div>
          <div class="px-3 px-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Accéder aux tableaux de bord publics (ouverture dans un nouvel onglet)" class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord" rel="noopener" target="_blank">
                          <i aria-hidden="true" class="ri-dashboard-line ri-lg fw-normal align-self-start"></i>
                          <span>Accéder aux tableaux de bord publics</span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2"></i>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  </div>
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_labor_inspector[DRIHL]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
                                  <div class="row row-cols-1 row-cols-md-2 mt-3 mt-md-4"><div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données personnalisées</span>
          </div>
          <div class="px-3 px-lg-4">
              
                  <ul class="list-unstyled mb-lg-5">
                      
                      
                      
                      
                      
                      
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/drihl/state">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Prescriptions des acteurs AHI de ma région</span>
                              </a>
  
                          </li>
                      
                      
                      
                  </ul>
              
          </div>
      </div>
  </div>
  <div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données publiques</span>
          </div>
          <div class="px-3 px-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Accéder aux tableaux de bord publics (ouverture dans un nouvel onglet)" class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord" rel="noopener" target="_blank">
                          <i aria-hidden="true" class="ri-dashboard-line ri-lg fw-normal align-self-start"></i>
                          <span>Accéder aux tableaux de bord publics</span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2"></i>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  </div>
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_labor_inspector[R\xe9seau IAE]
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
                                  <div class="row row-cols-1 row-cols-md-2 mt-3 mt-md-4"><div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données personnalisées</span>
          </div>
          <div class="px-3 px-lg-4">
              
                  <ul class="list-unstyled mb-lg-5">
                      
                      
                      
                      
                      
                      
                      
                          <li class="d-flex justify-content-between align-items-center mb-3">
                              <a class="btn-link btn-ico" href="/stats/iae_network/hiring">
                                  <i aria-hidden="true" class="ri-bar-chart-line ri-lg fw-normal align-self-start"></i>
                                  <span>Traitement et résultats des candidatures orientées par mes adhérents</span>
                              </a>
  
                          </li>
                      
                      
                  </ul>
              
          </div>
      </div>
  </div>
  <div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données publiques</span>
          </div>
          <div class="px-3 px-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Accéder aux tableaux de bord publics (ouverture dans un nouvel onglet)" class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord" rel="noopener" target="_blank">
                          <i aria-hidden="true" class="ri-dashboard-line ri-lg fw-normal align-self-start"></i>
                          <span>Accéder aux tableaux de bord publics</span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2"></i>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  </div>
                              
                          </div>
  '''
# ---
# name: test_index_stats_for_non_authorized_prescriber
  '''
  <div aria-labelledby="statistiques-tab" class="tab-pane fade show active" id="statistiques" role="tabpanel">
                              <h2>Statistiques</h2>
                              <div class="c-banner c-banner--pilotage rounded-3 p-3 py-md-5 mt-3 mt-md-4 mb-3 mb-md-5">
                                  <img alt="Le pilotage de l'inclusion" height="80" src="/static/vendor/theme-inclusion/images/logo-pilotage-inclusion.svg"/>
                              </div>
                              
                                  
                                  <div class="row row-cols-1 row-cols-md-2 mt-3 mt-md-4"><div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données personnalisées</span>
          </div>
          <div class="px-3 px-lg-4">
              
                  <p>
                      Vous ne disposez pas pour le moment de statistiques personnalisées.
                      Faites-nous part de vos besoins éventuels en nous contactant
                      <a aria-label="Formulaire de contact (ouverture dans un nouvel onglet)" href="https://aide.pilotage.inclusion.beta.gouv.fr/hc/fr/requests/new" rel="noreferrer noopener" target="_blank" title="Formulaire de contact (ouverture dans un nouvel onglet)">ici</a>.
                  </p>
              
          </div>
      </div>
  </div>
  <div class="col mb-3 mb-md-5">
      <div class="c-box p-0 h-100">
          <div class="p-3 p-lg-4">
              <span class="h4 mb-0">Données publiques</span>
          </div>
          <div class="px-3 px-lg-4">
              <ul class="list-unstyled mb-lg-5">
                  <li class="d-flex justify-content-between align-items-center mb-3">
                      <a aria-label="Accéder aux tableaux de bord publics (ouverture dans un nouvel onglet)" class="btn-link btn-ico" href="https://pilotage.inclusion.beta.gouv.fr/tableaux-de-bord" rel="noopener" target="_blank">
                          <i aria-hidden="true" class="ri-dashboard-line ri-lg fw-normal align-self-start"></i>
                          <span>Accéder aux tableaux de bord publics</span>
                          <i aria-hidden="true" class="ri-external-link-line fw-normal ms-2"></i>
                      </a>
                  </li>
              </ul>
          </div>
      </div>
  </div>
  </div>
                              
                          </div>
  '''
# ---
